fixed hover over colors, text spacing, added bg to dropdown form

--- a/03week/airplane/css/style.css
+++ b/03week/airplane/css/style.css
@@ -8,7 +8,6 @@ body {background-color: rgb(89, 216, 216);
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  /* padding:10px; */
   color: white;
   text-decoration: none;
 
@@ -20,22 +19,22 @@ body {background-color: rgb(89, 216, 216);
 
 
 a:visited {
-    color: rgb(187, 198, 247);
+    color:white;
 }
 
 a:hover {
-    color: rgb(172, 172, 172);}
+    color:#018d80;}
 
 
   header {
     width:100%;
     height:82px;
-top:0px;
-left: 0px;
-    /* padding: 5px; */
+    top:0px;
+    left: 0px;
     background-color: #123754;
     position: fixed;
     border-bottom:  2px solid white;
+    /* word-spacing: 10px; */
   
 }
 
@@ -49,16 +48,16 @@ left: 0px;
     padding-right:5%;
 }
 img{
-    max-height: 100%;
+    max-height: 70%;
 }
 
 
 .mainbox {
     background-color: #123754;
     width: 400px;
-    height: 380px;
-    margin: 15% 45% 50% 10%;
-    /* border: 1px solid hotpink; */
+    height: 370px;
+
+    margin: 14% 55% 50% 8%;
     border-radius:5px;
 }
 
@@ -70,112 +69,107 @@ img{
 }
 
 .button {
-    display: flex;
-    flex-wrap: wrap;
+    display: inline-block;
     background-color: #0063b7;
     box-sizing: content-box;
     border:none;
     width: calc(100% / 3);
     color: white;
     margin-bottom:10px;
-    /* padding: 2px 30px; */
     justify-content: center;
-  align-items: center;
+    align-items: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
 }
 
-.first {
+
+.first {height:50px;
     border-top-left-radius: 5px;
+    background-color: #018d80;
 
 }
 
-.middle {
+.first:hover {background-color:#0063b7;
+
+}
+
+.middle {height:50px;
 background-color: #018d80;
 
 }
+.middle:hover {background-color:#0063b7;
 
-.last {border-top-right-radius: 5px;
-    background-color: #018d80}
+}
+
+.last {height:50px;
+    border-top-right-radius: 5px;
+    background-color: #018d80;
+
+}
+
+.last:hover {background-color:#0063b7
+
+}
 
 .button4 {padding-bottom: 5px;
-    background-color: #018d80
+    background-color: #018d80;
+    border-radius: 5px;
 
-    
 }
 
 
-    input[type="text"], text area {
+input[type="text"], text area {
         height:40px;
         width:160px;
         background-color : #123754; 
-        -webkit-box-align: center;
         color:white;
         border-radius: 5px;
       
-      }
+}
+select {  height:40px;
+    width:40px;
+    background-color : #123754; 
+    color:white;
+    border-radius: 5px;}
 
 .fields {
     display: inline-block;
-    -webkit-box-align: center;
-    /* border:1px solid green; */
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex-basis: auto;
+    text-align: center;
     color:white;
     width: 36%;
-    margin-right: 4px;
+    height:40px;
+    margin:auto;
     object-fit: contain;
-  height:30px;
-  padding: 25px;
+    height:30px;
+    padding: 25px;
 
 }
 
 .fields2 {   
     display: inline-block;
-    -webkit-box-align: center;
-    /* border:1px solid green; */
-    /* flex-direction: row;
-    flex-wrap: wrap;
-    flex-basis: auto; */
     color:white;
     width: 36%;
-    margin-right: 4px;
+    margin:auto;
     object-fit: contain;
-  height:30px;
-  padding: 25px;
-
-}
-
-/* .lowbox { border: 1px solid darkmagenta;
-    display: inline-block;
-    width: 36%;
-    object-fit: contain;
-  height:20px;
+    height:30px;
     padding: 25px;
 
-} */
-
-finalsearch {
-display:flex;
-flex-direction: row;
-flex-wrap: nowrap;
-justify-content: center;
-margin-bottom: 40px;
 }
 
+
 .search {
-    background-color: #0063b7; /* Green */
+    background-color: #0063b7; 
     border: none;
     color: white;
     box-sizing: content-box;
     width:350px;
     margin-left: 20px;
-    padding: 15px 0px;
+    padding: 10px 0px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    border-radius: 5px;
 }
- 
+.search:hover {background-color:#018d80}
